View all Sequences doesn't show all sequences #59954

Closed
opened 2018-12-29 14:53:48 +01:00 by ChristopherAnderssarian · 15 comments

NOTE: This is not a duplicate of #59951. They have different causes.

System Information
Operating system: Microsoft Windows 7 Ultimate, Version 6.1.7601, Service Pack 1, Build 7601
GPU: ASUS Strix Radeon Vega 64
CPU: Intel(R) Core(TM) i7-5960X
RAM: 32.0 GB
Full System Information: Here

Blender Version
Broken:
2.80, 29 December, 01:07:02 -7c438e5366b2-

Short description of error

Pressing home moves the view to the middle and zooms in, away from the strip.

Exact steps for others to reproduce the error

HFR 2.8 redo.blend

Press Home


PS This is probably related to the fact that when trying to View all Sequences the zoom always shows (or tries to show) the Zero mark on the timeline.

NOTE: This is not a duplicate of #59951. They have different causes. **System Information** Operating system: Microsoft Windows 7 Ultimate, Version 6.1.7601, Service Pack 1, Build 7601 GPU: ASUS Strix Radeon Vega 64 CPU: Intel(R) Core(TM) i7-5960X RAM: 32.0 GB Full System Information: [Here ](https://developer.blender.org/p/Christopher_Anderssarian/) **Blender Version** Broken: 2.80, 29 December, 01:07:02 -7c438e5366b2- **Short description of error** Pressing home moves the view to the middle and zooms in, away from the strip. **Exact steps for others to reproduce the error** [HFR 2.8 redo.blend](https://archive.blender.org/developer/F6107054/HFR_2.8_redo.blend) Press Home ___ PS This is probably related to the fact that when trying to *View all Sequences* the zoom always shows (or tries to show) the Zero mark on the timeline.

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Richard Antalik self-assigned this 2018-12-29 17:28:10 +01:00

Area viewed by view_all ({key home}) operator has defaults:

min[0] = 0.0;          // X min
max[0] = EFRA + 1;     // X max
min[1] = 0.0;          // Y min
max[1] = 8.0;          // Y max

Then if boundary of any currently visible sequence is more/less then these defaults, highest value(+1 to right and up) is used
This area affects also scrollbar min/max range.

Should then default X range be discarded if there is any sequence visible?
I think, that Y range is pretty sensible here...

Area viewed by view_all ({key home}) operator has defaults: ``` min[0] = 0.0; // X min max[0] = EFRA + 1; // X max min[1] = 0.0; // Y min max[1] = 8.0; // Y max ``` Then if boundary of any currently visible sequence is more/less then these defaults, highest value(+1 to right and up) is used This area affects also scrollbar min/max range. Should then default X range be discarded if there is any sequence visible? I think, that Y range is pretty sensible here...

This issue was referenced by f66b5edf98

This issue was referenced by f66b5edf98c98fcf04f99d962647db54f17b79e4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@iss Did you add this task to the commit by accident? The view is still not working correctly...

@iss Did you add this task to the commit by accident? The view is still not working correctly...

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Ah thanks, I overlooked that start should be moved...

Ah thanks, I overlooked that start should be moved...

Added subscriber: @a.monti

Added subscriber: @a.monti

@iss What should be the behaviour for the operator? I see three main options:

  • Frame everything no matter where in the timeline
  • Frame everything starting from 0 (what it does now)

Frame everything starting from the start frame

It could also be a mix, for example using the start frame as min, unless there are strips left to it.

@iss What should be the behaviour for the operator? I see three main options: - Frame everything no matter where in the timeline - Frame everything starting from 0 (what it does now) # Frame everything starting from the start frame It could also be a mix, for example using the start frame as min, unless there are strips left to it.

In #59954#798342, @a.monti wrote:
@iss What should be the behaviour for the operator? I see three main options:

Frame everything no matter where in the timeline

Frame everything starting from 0 (what it does now)

Frame everything starting from the start frame

It could also be a mix, for example using the start frame as min, unless there are strips left to it.

in this case operator uses boundbox_seq() to get used area, and minimum is wrong - should be min- [x] = SFRA;
Possibly preview range start if used.

> In #59954#798342, @a.monti wrote: > @iss What should be the behaviour for the operator? I see three main options: > > > # Frame everything no matter where in the timeline > # Frame everything starting from 0 (what it does now) > # Frame everything starting from the start frame > > It could also be a mix, for example using the start frame as min, unless there are strips left to it. in this case operator uses `boundbox_seq()` to get used area, and minimum is wrong - should be `min- [x] = SFRA;` Possibly preview range start if used.
Richard Antalik was unassigned by Dalai Felinto 2019-12-23 16:35:33 +01:00

Added subscriber: @iss

Added subscriber: @iss

Added subscriber: @propersquid

Added subscriber: @propersquid

This issue was referenced by 4341b5b2fe

This issue was referenced by 4341b5b2fe722be7165896d8ce6502f4a158e878

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-05-14 04:11:17 +02:00

Removed subscriber: @propersquid

Removed subscriber: @propersquid
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59954
No description provided.