Fix T59954: View all Sequences doesn't show all sequences

Set boundbox_seq start X minimum value to SFRA.

This should be part of rBf66b5edf98c9, but I forgot to include this change.